src_old/objects/ProjectAccount__c.object
<CustomObject>
    <description>Project Account maps an Account to a Project and defines how the Account will be billed. Project Account is related to Project, Account, and Account Address.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please make sure this account&apos;s &apos;Can Request Project&apos; setting is enabled.</errorMessage>
            <filterItems>
                <field>Account.CanRequestProjects__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Accounts</relationshipLabel>
        <relationshipName>Project_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>AccountAddress__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>AccountAddress__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Billing Address</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountAddress__c</referenceTo>
        <relationshipLabel>Project Accounts</relationshipLabel>
        <relationshipName>ProjectAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToContactName__c</fullName>
        <formula>BillToContact__r.LastName &amp; &quot;, &quot; &amp;  BillToContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillTo Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillTo Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Accounts</relationshipLabel>
        <relationshipName>Project_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Accounts</relationshipLabel>
        <relationshipName>Project_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Project_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ResponsibleParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Accounts (Responsible Party)</relationshipLabel>
        <relationshipName>Project_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SplitValue__c</fullName>
        <label>% / $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Account</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Project Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Max100SplitValuePercentage</fullName>
        <active>true</active>
        <description>If the project has a split type of Percentage the max value that any project account can have is 100 %</description>
        <errorConditionFormula>AND(TEXT(Project__r.SplitType__c) = &quot;Percentage (%)&quot;,  SplitValue__c &gt; 100)</errorConditionFormula>
        <errorDisplayField>SplitValue__c</errorDisplayField>
        <errorMessage>Max split value is 100%</errorMessage>
    </validationRules>
</CustomObject>